--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,116 @@
 Electric_Piano (2).zip
+ballplayer/db/alt_u_div_0ie.tdf
+ballplayer/db/alt_u_div_she.tdf
+ballplayer/db/alt_u_div_uee.tdf
+ballplayer/db/ballplayer.(54).cnf.cdb
+ballplayer/db/ballplayer.(54).cnf.hdb
+ballplayer/db/ballplayer.(65).cnf.cdb
+ballplayer/db/ballplayer.(65).cnf.hdb
+ballplayer/db/ballplayer.(72).cnf.cdb
+ballplayer/db/ballplayer.(72).cnf.hdb
+ballplayer/db/ballplayer.(73).cnf.cdb
+ballplayer/db/ballplayer.(73).cnf.hdb
+ballplayer/db/ballplayer.(74).cnf.cdb
+ballplayer/db/ballplayer.(74).cnf.hdb
+ballplayer/db/ballplayer.(75).cnf.cdb
+ballplayer/db/ballplayer.(75).cnf.hdb
+ballplayer/db/ballplayer.(76).cnf.cdb
+ballplayer/db/ballplayer.(76).cnf.hdb
+ballplayer/db/ballplayer.(77).cnf.cdb
+ballplayer/db/ballplayer.(77).cnf.hdb
+ballplayer/db/ballplayer.(78).cnf.cdb
+ballplayer/db/ballplayer.(78).cnf.hdb
+ballplayer/db/ballplayer.(79).cnf.cdb
+ballplayer/db/ballplayer.(79).cnf.hdb
+ballplayer/db/ballplayer.(80).cnf.cdb
+ballplayer/db/ballplayer.(80).cnf.hdb
+ballplayer/db/ballplayer.(81).cnf.cdb
+ballplayer/db/ballplayer.(81).cnf.hdb
+ballplayer/db/ballplayer.(82).cnf.cdb
+ballplayer/db/ballplayer.(82).cnf.hdb
+ballplayer/db/ballplayer.(83).cnf.cdb
+ballplayer/db/ballplayer.(83).cnf.hdb
+ballplayer/db/ballplayer.(84).cnf.cdb
+ballplayer/db/ballplayer.(84).cnf.hdb
+ballplayer/db/ballplayer.(85).cnf.cdb
+ballplayer/db/ballplayer.(85).cnf.hdb
+ballplayer/db/ballplayer.(86).cnf.cdb
+ballplayer/db/ballplayer.(86).cnf.hdb
+ballplayer/db/ballplayer.(87).cnf.cdb
+ballplayer/db/ballplayer.(87).cnf.hdb
+ballplayer/db/ballplayer.asm_labs.ddb
+ballplayer/db/ballplayer.asm.qmsg
+ballplayer/db/ballplayer.asm.rdb
+ballplayer/db/ballplayer.cmp.bpm
+ballplayer/db/ballplayer.cmp.cdb
+ballplayer/db/ballplayer.cmp.hdb
+ballplayer/db/ballplayer.cmp.idb
+ballplayer/db/ballplayer.cmp.logdb
+ballplayer/db/ballplayer.cmp.rdb
+ballplayer/db/ballplayer.db_info
+ballplayer/db/ballplayer.fit.qmsg
+ballplayer/db/ballplayer.hif
+ballplayer/db/ballplayer.map_bb.cdb
+ballplayer/db/ballplayer.map_bb.hdb
+ballplayer/db/ballplayer.map_bb.logdb
+ballplayer/db/ballplayer.map.bpm
+ballplayer/db/ballplayer.map.cdb
+ballplayer/db/ballplayer.map.hdb
+ballplayer/db/ballplayer.map.kpt
+ballplayer/db/ballplayer.map.logdb
+ballplayer/db/ballplayer.map.qmsg
+ballplayer/db/ballplayer.map.rdb
+ballplayer/db/ballplayer.pow.qmsg
+ballplayer/db/ballplayer.pre_map.hdb
+ballplayer/db/ballplayer.quiproj.66572.rdr.flock
+ballplayer/db/ballplayer.root_partition.map.reg_db.cdb
+ballplayer/db/ballplayer.routing.rdb
+ballplayer/db/ballplayer.rtlv_sg_swap.cdb
+ballplayer/db/ballplayer.rtlv_sg.cdb
+ballplayer/db/ballplayer.rtlv.hdb
+ballplayer/db/ballplayer.sta_cmp.8_slow_1200mv_85c.tdb
+ballplayer/db/ballplayer.sta.qmsg
+ballplayer/db/ballplayer.sta.rdb
+ballplayer/db/ballplayer.tiscmp.fast_1200mv_0c.ddb
+ballplayer/db/ballplayer.tiscmp.fastest_slow_1200mv_0c.ddb
+ballplayer/db/ballplayer.tiscmp.fastest_slow_1200mv_85c.ddb
+ballplayer/db/ballplayer.tiscmp.slow_1200mv_0c.ddb
+ballplayer/db/ballplayer.tiscmp.slow_1200mv_85c.ddb
+ballplayer/db/ballplayer.tmw_info
+ballplayer/db/ballplayer.vpr.ammdb
+ballplayer/db/ballplayer.zippleback_io_sim_cache.ss_85c_slow.hsd
+ballplayer/db/lpm_divide_bkl.tdf
+ballplayer/db/lpm_divide_ntl.tdf
+ballplayer/db/lpm_divide_ptl.tdf
+ballplayer/db/mult_1es.tdf
+ballplayer/db/prev_cmp_ballplayer.qmsg
+ballplayer/db/sign_div_unsign_akh.tdf
+ballplayer/db/sign_div_unsign_plh.tdf
+ballplayer/db/sign_div_unsign_rlh.tdf
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.cmp.ammdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.cmp.cdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.cmp.hdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.cmp.logdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.cmp.rcfdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.cdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.dpi
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.hbdb.cdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.hbdb.hdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.hdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.kpt
+ballplayer/incremental_db/compiled_partitions/ballplayer.rrp.hdb
+ballplayer/output_files/ballplayer.asm.rpt
+ballplayer/output_files/ballplayer.done
+ballplayer/output_files/ballplayer.fit.rpt
+ballplayer/output_files/ballplayer.fit.smsg
+ballplayer/output_files/ballplayer.fit.summary
+ballplayer/output_files/ballplayer.flow.rpt
+ballplayer/output_files/ballplayer.map.rpt
+ballplayer/output_files/ballplayer.map.summary
+ballplayer/output_files/ballplayer.pin
+ballplayer/output_files/ballplayer.pof
+ballplayer/output_files/ballplayer.pow.rpt
+ballplayer/output_files/ballplayer.pow.summary
+ballplayer/output_files/ballplayer.sof
+ballplayer/output_files/ballplayer.sta.rpt
+ballplayer/output_files/ballplayer.sta.summary
