--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,51 @@ ballplayer/output_files/ballplayer.pow.summary
 ballplayer/output_files/ballplayer.sof
 ballplayer/output_files/ballplayer.sta.rpt
 ballplayer/output_files/ballplayer.sta.summary
+ballplayer/db/ballplayer.asm.qmsg
+ballplayer/db/ballplayer.asm.rdb
+ballplayer/db/ballplayer.cmp.bpm
+ballplayer/db/ballplayer.cmp.cdb
+ballplayer/db/ballplayer.cmp.hdb
+ballplayer/db/ballplayer.cmp.rdb
+ballplayer/db/ballplayer.fit.qmsg
+ballplayer/db/ballplayer.map_bb.cdb
+ballplayer/db/ballplayer.map_bb.hdb
+ballplayer/db/ballplayer.map.bpm
+ballplayer/db/ballplayer.map.cdb
+ballplayer/db/ballplayer.map.hdb
+ballplayer/db/ballplayer.map.kpt
+ballplayer/db/ballplayer.map.qmsg
+ballplayer/db/ballplayer.map.rdb
+ballplayer/db/ballplayer.pow.qmsg
+ballplayer/db/ballplayer.pre_map.hdb
+ballplayer/db/ballplayer.quiproj.59296.rdr.flock
+ballplayer/db/ballplayer.root_partition.map.reg_db.cdb
+ballplayer/db/ballplayer.rtlv_sg_swap.cdb
+ballplayer/db/ballplayer.rtlv_sg.cdb
+ballplayer/db/ballplayer.rtlv.hdb
+ballplayer/db/ballplayer.sta.qmsg
+ballplayer/db/ballplayer.sta.rdb
+ballplayer/db/ballplayer.tiscmp.fast_1200mv_0c.ddb
+ballplayer/db/ballplayer.tiscmp.slow_1200mv_0c.ddb
+ballplayer/db/ballplayer.tiscmp.slow_1200mv_85c.ddb
+ballplayer/db/prev_cmp_ballplayer.qmsg
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.cmp.cdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.cmp.hdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.cdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.dpi
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.hbdb.cdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.hbdb.hdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.hdb
+ballplayer/incremental_db/compiled_partitions/ballplayer.root_partition.map.kpt
+ballplayer/incremental_db/compiled_partitions/ballplayer.rrp.hdb
+ballplayer/output_files/ballplayer.asm.rpt
+ballplayer/output_files/ballplayer.done
+ballplayer/output_files/ballplayer.fit.rpt
+ballplayer/output_files/ballplayer.fit.summary
+ballplayer/output_files/ballplayer.flow.rpt
+ballplayer/output_files/ballplayer.map.rpt
+ballplayer/output_files/ballplayer.map.summary
+ballplayer/output_files/ballplayer.pow.rpt
+ballplayer/output_files/ballplayer.pow.summary
+ballplayer/output_files/ballplayer.sof
+ballplayer/output_files/ballplayer.sta.rpt
